# nutrition-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  i18n.py
app/auth/: __init__.py  service.py
app/bot/: handlers.py  health_server.py  rate_limit.py  telegram_bot.py
app/cli/: __init__.py  auth.py
app/evals/: __init__.py  adversarial_cases.yaml  compare_golden_lanes.py  compare_golden_runs.py  datasets.py  fastfood_tiny_sample.jsonl  food_linker_shadow_report.py  golden.py  llm_stub.py  metrics.py  metrics_history.py  phoenix_datasets.py  retrieval_miss_report.py  run_eval.py  run_golden_eval.py  run_golden_gate.py  run_nutrition_eval.py  run_official_golden_eval.py  run_retrieval_smoke.py
app/graph/: __init__.py  graph.py  state.py
app/llm/: __init__.py  client.py  structured.py
app/memory/: __init__.py  service.py
app/observability/: __init__.py  phoenix.py  request_context.py  trace_logging.py
app/prompts/: critic.md  image_recognizer.md  packaging_recognizer.md  scope_classifier.md  synthesizer.md  text_parser.md
app/schemas/: __init__.py  inputs.py  nutrition.py  outputs.py  safety.py
app/storage/: __init__.py  db.py
app/tools/: __init__.py  cache.py  fallback_nutrition.py  fatsecret_client.py  food_linker.py  food_normalization.py  food_query.py  food_vocabulary.py  food_vocabulary.yaml  image_utils.py  nutrition_arbitration.py  nutrition_ranking.py  nutrition_tools.py  nutrition_validation.py  open_food_facts_client.py  provider_utils.py  usda_client.py
deploy/phoenix/: docker-compose.yml
docs/: eval-investigation-2026-06-23.md  live-golden-eval-2026-06-24.md  nutrition-retrieval.md  observability.md
evals/: README.md
evals/datasets/: nutrition_agent_golden_conversations_v1.csv  (+4 more)
scripts/: deploy.sh  phoenix.sh  run_local.sh
systemd/: nutrition-agent.service
tests/: test_auth_service.py  test_bot_auth_handlers.py  test_calculator.py  test_cola_integrity.py  test_concurrent_nutrition_retrieval.py  test_critic_loop.py  test_estimate_first_policy.py  test_fallback_nutrition.py  test_fatsecret_client.py  test_food_normalization.py  test_food_vocabulary.py  test_golden_eval.py  test_graph_routes.py  test_health_server.py  test_image_recognizer.py  test_live_nutrition_providers.py  test_local_moderation.py  test_memory_integration.py  test_memory_service.py  test_multilingual_branded_products.py  test_nutrition_eval.py  test_nutrition_retrieval.py  test_phoenix_observability.py  test_rate_limit.py  test_retrieval_miss_report.py  test_scope_classifier.py  test_secret_hygiene.py  test_synthesizer_formatting.py  test_telegram_bot.py  test_text_parser.py  test_usda_client.py  test_water_integrity.py
(+79 files in other folders)
