[project]
name = "nutrition-agent"
version = "0.1.0"
description = "Agentic nutrition estimation MVP with LangGraph and a Telegram bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "langchain>=0.2.14",
    "langchain-openai>=0.1.22",
    "langgraph>=0.2.14",
    "openai>=1.40.0",
    "pillow>=10.4.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.4",
    "pyyaml>=6.0.2",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "systemd*", "scripts*", "data*"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
