[project]
name = "nutrition-agent"
version = "0.1.0"
description = "Agentic nutrition estimation MVP with LangGraph and a Telegram bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix-otel>=0.16.0",
    "httpx>=0.27.0",
    "langchain>=1.3.9",
    "langchain-openai>=0.1.22",
    "langgraph>=0.2.14",
    "openai>=1.40.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "pillow>=10.4.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.4",
    "pyyaml>=6.0.2",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0,<2",
    "pip-audit>=2.9.0",
    "pytest>=8.3.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.6.2",
    "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "systemd*", "scripts*", "data*"]

[tool.setuptools.package-data]
"app.tools" = ["food_vocabulary.yaml"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = true
no_implicit_optional = true
incremental = false
exclude = ["^app/evals/"]
pretty = true

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
